// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patterns.md scaffold > TypeScript Next.js project with 1 pattern 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** None

**Unexamined:** Does this project use error handling?

## Validation

**Detected:** None

**Unexamined:** Does this project use validation?

## Database

**Detected:** None

**Unexamined:** Does this project use database?

## Authentication

**Detected:** None

**Unexamined:** Does this project use authentication?

## Testing

**Detected:** vitest
**Confidence:** 0.92

**Evidence:**
- vitest in dependencies

**Unexamined:** Real code examples from codebase showing usage

---

## Framework Patterns

**Unexamined:** Framework-specific patterns (see context/setup/framework-snippets/nextjs.md)

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`patterns.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** None

**Unexamined:** Does this project use error handling?

## Validation

**Detected:** None

**Unexamined:** Does this project use validation?

## Database

**Detected:** None

**Unexamined:** Does this project use database?

## Authentication

**Detected:** None

**Unexamined:** Does this project use authentication?

## Testing

**Detected:** None

**Unexamined:** Does this project use testing?

---

## Framework Patterns

**Unexamined:** Framework-specific patterns (see context/setup/framework-snippets/generic.md)

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`patterns.md scaffold > rich FastAPI project with 5 patterns 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** exceptions (fastapi)
**Confidence:** 0.90

**Evidence:**
- HTTPException imports

**Unexamined:** Real code examples from codebase showing usage

## Validation

**Detected:** pydantic
**Confidence:** 0.95

**Evidence:**
- BaseModel usage
- 7 Pydantic models

**Unexamined:** Real code examples from codebase showing usage

## Database

**Detected:** Multiple patterns

**Primary:**
- **Library:** sqlalchemy (async)
- **Confidence:** 0.95
- **Evidence:**
  - AsyncSession in 12 files
  - asyncpg driver

**Also detected:**
- sqlalchemy (sync) — confidence: 0.85

**Unexamined:** Real code examples showing both patterns, why multiple?

## Authentication

**Detected:** oauth2-jwt
**Confidence:** 0.95

**Evidence:**
- python-jose in dependencies
- OAuth2PasswordBearer detected

**Unexamined:** Real code examples from codebase showing usage

## Testing

**Detected:** pytest
**Confidence:** 1.00

**Evidence:**
- pytest in dependencies
- pytest.ini found

**Unexamined:** Real code examples from codebase showing usage

---

## Framework Patterns

**Unexamined:** Framework-specific patterns (see context/setup/framework-snippets/fastapi.md)

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
